# EntityComponentSystem

./: .gitignore  .gitmodules  CMakeLists.txt  Common.hpp  Entity.h  Entity.hpp  Forward.hpp  Handle.hpp  Hash.hpp  README.md  Types.h  Types.hpp  main.cpp
Common/: Hash.hpp  TypeDemangle.hpp  TypeInfoTraits.hpp  TypeMetaTraits.hpp  TypeTraitsExt.hpp
Types/: CoreComponents.hpp  CoreTypes.hpp  Entity.hpp  ErrorCodes.hpp  Handle.hpp
include/: ECS.h
include/Traits/: TypeInfoTraits.hpp  TypeTraitsExt.hpp
include/Types/: Attribute.hpp  Entity.hpp  EntityPool.h  ErrorCode.hpp  Forward.hpp  Handle.hpp  Meta.h  RTTI.h  Store.h
include/Utils/: DynamicBitset.hpp  Hash.hpp  Hive.hpp  StaticFor.hpp  StaticReflection.hpp  TypeDemangle.hpp
src/: CoreTypes.h  EntityPool.cpp  Meta.cpp  RTTI.cpp
